Add draft entries

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>My first Vue app</title>
   <script src="https://unpkg.com/vue"></script>
 </head>
+
 <body>
   <div id="app">
     {{ message }}
@@ -13,9 +15,70 @@
     var app = new Vue({
       el: '#app',
       data: {
-        message: 'Hello Vue!'
+        message: 'Dough Design creation'
       }
     })
   </script>
+
+  <h1>Dough Dev Details</h1>
+
+  <div>
+    <h5>Intern to Engineer - February 18, 2021</h5>
+    <p>
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+      Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+      Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+    </p>
+  </div>
+
+  <div>
+    <h5>Schedule: Makers VS Managers - April 7, 2018</h5>
+    <p>
+      The art of a person's schedule. The well known calendar invite. Some (let's refer to this group as
+      "Managers")
+      live by this tool
+      and cannot function properly without checking it every morning to plan the upcoming day. However, for others
+      (let's refer to these
+      people as "Makers") see this tool as more of a creative killer, a buzzkill, a wet blanket (I think you get
+      my
+      point) that just becomes
+      a part of life that you learn to live with because society deems it "normal".
+    </p>
+    <p>
+      Growing up in a very "Always show up 5 minutes early" type environment, it was definitely instilled in me at
+      a
+      very young age that
+      it is rude to show up late for an appointment/meeting/commitment. Humans as a whole, respect the value of
+      time
+      and do our best to manage it,
+      control it, and try to optimize it throughout our lives. The issue that I have run into with this type of
+      mindset is that creation/creativity
+      does not live on a timed schedule. Now, of course there are ways to set aside time for creative thoughts and
+      process; however, when you get "real"
+      with yourself, sometimes creativity just strikes during your morning shower, or in the middle of a meeting,
+      or
+      maybe right before you fall asleep. My inital
+      instinct when this little beam of brilliance hits me is to write it down, sketch it up, or code that motha
+      until
+      the cows come home.
+    </p>
+    <p>
+      Unfortunately, herein lies the issue ... I cannot just get up and leave a meeting to go indulge on a little
+      creative snack. I
+      find if my entire day is following a
+      "Managers" schedule that very little creative work gets done that day. Usually what occurs is a lot of
+      planning,
+      and discussing, and perhaps some problem
+      generation gets done, but usually very little out of the box thinking occurs. On the flip side, if I block
+      out
+      maybe the first four hours of my morning,
+      just to hold from being scooped up by the meeting troll ... then more times than not, something cool and new
+      is
+      generated or brought into existence to play a role (maybe)
+      in this wonderful world called Design.
+    </p>
+  </div>
+
 </body>
+
 </html>
