--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%; margin: 1em; background-color: lightgray;">
 
 <head>
-  <title>My first Vue app</title>
+  <title>Dough Dev Details</title>
   <script src="https://unpkg.com/vue"></script>
 </head>
 
