--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <title>Dough Dev Details</title>
   <script src="https://unpkg.com/vue"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 
-<body>
-  <div id="app">
+<body class="container-fluid" style="background-color: lightgray;">
+  <div id="app" style="padding: 5px;">
     {{ message }}
   </div>
 
@@ -23,6 +24,10 @@
   <h1>Dough Dev Details</h1>
 
   <div>
+    <button type="button" class="btn btn-primary" style="position: absolute; right: 10px; top: 5px; margin: 10px;">New</button>
+  </div>
+
+  <div class="container" style="padding: 1em;">
     <h5>Intern to Engineer - February 18, 2021</h5>
     <p>
       Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
@@ -31,7 +36,7 @@
     </p>
   </div>
 
-  <div>
+  <div class="container" style="padding: 1em;">
     <h5>Schedule: Makers VS Managers - April 7, 2018</h5>
     <p>
       The art of a person's schedule. The well known calendar invite. Some (let's refer to this group as
@@ -78,7 +83,6 @@
       in this wonderful world called Design.
     </p>
   </div>
-
 </body>
 
 </html>
