--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html style="height: 100%; margin: 1em; background-color: lightgray;">
+<html>
 
 <head>
   <title>Dough Dev Details</title>
   <script src="https://unpkg.com/vue"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body class="container-fluid" style="background-color: lightgray;">
+<body class="container-fluid">
   <div id="app" style="padding: 5px;">
     {{ message }}
   </div>
@@ -21,13 +23,13 @@
     })
   </script>
 
-  <h1>Dough Dev Details</h1>
+  <h1 class="comp-title">DOUGH Dev Details</h1>
 
   <div>
-    <button type="button" class="btn btn-primary" style="position: absolute; right: 10px; top: 5px; margin: 10px;">New</button>
+    <button type="button" class="btn btn-primary">New</button>
   </div>
 
-  <div class="container" style="padding: 1em;">
+  <div class="container">
     <h5>Intern to Engineer - February 18, 2021</h5>
     <p>
       Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
@@ -36,7 +38,7 @@
     </p>
   </div>
 
-  <div class="container" style="padding: 1em;">
+  <div class="container">
     <h5>Schedule: Makers VS Managers - April 7, 2018</h5>
     <p>
       The art of a person's schedule. The well known calendar invite. Some (let's refer to this group as
