--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
   </div>
 
   <div class="container">
-    <h5>Intern to Engineer - February 18, 2021</h5>
+    <h5>Blog Resurrection - September 18, 2021</h5>
     <p>
-      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-      Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+      Bringing my blog back to life to document what is going on in my dev life as I work full time as a Software
+      Engineer for a popular Sporting Goods retailer in the United States; as well as, experiment/research new tech
+      at night or on my weekends.
     </p>
   </div>
 
