Create card layout

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <button type="button" class="btn btn-primary">New</button>
   </div>
 
-  <div class="container">
+  <div class="card">
     <h5>Blog Resurrection - September 18, 2021</h5>
     <p>
       Bringing my blog back to life to document what is going on in my dev life as I work full time as a Software
@@ -38,7 +38,7 @@
     </p>
   </div>
 
-  <div class="container">
+  <div class="card">
     <h5>Schedule: Makers VS Managers - April 7, 2018</h5>
     <p>
       The art of a person's schedule. The well known calendar invite. Some (let's refer to this group as
