Update blog resurrection post

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     var app = new Vue({
       el: '#app',
       data: {
-        message: 'Dough Design creation'
+        message: 'a Dough Design creation'
       }
     })
   </script>
@@ -32,9 +32,10 @@
   <div class="card">
     <h5>Blog Resurrection - September 18, 2021</h5>
     <p>
-      Bringing my blog back to life to document what is going on in my dev life as I work full time as a Software
+      Bringing my blog back to life to document what is going on in my dev life, as I work full time as a Software
       Engineer for a popular Sporting Goods retailer in the United States; as well as, experiment/research new tech
-      at night or on my weekends.
+      at night or on my weekends. Currently, playing around with Vue.js as I build out the Dev Details page to compare 
+      a lighter weight library compared to Angular (my choice for building out web apps).
     </p>
   </div>
 
