Create The Plan post

--- a/index.html
+++ b/index.html
@@ -14,19 +14,28 @@
     {{ message }}
   </div>
 
-  <script>
-    var app = new Vue({
-      el: '#app',
-      data: {
-        message: 'a Dough Design creation'
-      }
-    })
-  </script>
-
   <h1 class="comp-title">DOUGH Dev Details</h1>
 
-  <div>
-    <button type="button" class="btn btn-primary">New</button>
+  <div class="card">
+    <h5>The Plan - September 19, 2021</h5>
+    <p>
+      I have been thinking about what to do with this blog for quite some time now, and I've decided my main
+      objective will be to document my development goals, struggles, and accomplishments for the forseeable future.
+      FYI - I have not installed a spellcheck for vscode yet, so apologies for any typo errors.
+    </p>
+    <p>
+      For my first little project (you could refer to it as a story if you are an Agile fan) is going to be implementing
+      a "Post" button using Vue.js to pop a modal, allow a user (me for now) to type an entry, then save it to a
+      postgresql
+      database through a NodeJS api that I built. A follow up story will then be to select the blog entry from the db
+      and
+      display it on a card.
+    </p>
+    <p>
+      As I am doing these stories/projects, I will also be playing around with the design of this site (trying to master
+      mobile first design). I think it will be cool to start very vanilla using little css to launch this blog and watch
+      it change over time.
+    </p>
   </div>
 
   <div class="card">
@@ -34,7 +43,7 @@
     <p>
       Bringing my blog back to life to document what is going on in my dev life, as I work full time as a Software
       Engineer for a popular Sporting Goods retailer in the United States; as well as, experiment/research new tech
-      at night or on my weekends. Currently, playing around with Vue.js as I build out the Dev Details page to compare 
+      at night or on my weekends. Currently, playing around with Vue.js as I build out the Dev Details page to compare
       a lighter weight library compared to Angular (my choice for building out web apps).
     </p>
   </div>
@@ -87,5 +96,14 @@
     </p>
   </div>
 </body>
+
+<script>
+  var app = new Vue({
+    el: '#app',
+    data: {
+      message: '~ a Dough Design creation ~'
+    }
+  })
+</script>
 
 </html>
