Fix wording of a post

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Dough Dev Details</title>
-  <script src="https://unpkg.com/vue"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
@@ -17,14 +17,14 @@
   <h1 class="comp-title">DOUGH Dev Details</h1>
 
   <div class="card">
-    <h5>The Plan - September 19, 2021</h5>
+    <h3>The Plan - September 19, 2021</h3>
     <p>
       I have been thinking about what to do with this blog for quite some time now, and I've decided my main
       objective will be to document my development goals, struggles, and accomplishments for the forseeable future.
       FYI - I have not installed a spellcheck for vscode yet, so apologies for any typo errors.
     </p>
     <p>
-      For my first little project (you could refer to it as a story if you are an Agile fan) is going to be implementing
+      For my first little project (you could refer to it as a story if you are an Agile fan) I am going to be implementing
       a "Post" button using Vue.js to pop a modal, allow a user (me for now) to type an entry, then save it to a
       postgresql
       database through a NodeJS api that I built. A follow up story will then be to select the blog entry from the db
@@ -39,7 +39,7 @@
   </div>
 
   <div class="card">
-    <h5>Blog Resurrection - September 18, 2021</h5>
+    <h3>Blog Resurrection - September 18, 2021</h3>
     <p>
       Bringing my blog back to life to document what is going on in my dev life, as I work full time as a Software
       Engineer for a popular Sporting Goods retailer in the United States; as well as, experiment/research new tech
@@ -49,7 +49,7 @@
   </div>
 
   <div class="card">
-    <h5>Schedule: Makers VS Managers - April 7, 2018</h5>
+    <h3>Schedule: Makers VS Managers - April 7, 2018</h3>
     <p>
       The art of a person's schedule. The well known calendar invite. Some (let's refer to this group as
       "Managers")
