--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
   <h1 class="comp-title">DOUGH Dev Details</h1>
 
   <div class="card">
+    <h3>Back at it! - February 14, 2022</h3>
+    <p>
+      Greetings, Dough Dev world! I am back at it again with new updates and a new year to try and keep some consistency
+      going with side dev projects. I think it is probably too lofty a goal to try and commit once a day for 100 days or
+      whatever
+      that Insta challenge is that bootcampers do these days, but I do think at least 2-3 posts a week could be very
+      doable and see how that will grow or change over time.
+    </p>
+  </div>
+
+  <div class="card">
     <h3>The Plan - September 19, 2021</h3>
     <p>
       I have been thinking about what to do with this blog for quite some time now, and I've decided my main
@@ -24,7 +35,8 @@
       FYI - I have not installed a spellcheck for vscode yet, so apologies for any typo errors.
     </p>
     <p>
-      For my first little project (you could refer to it as a story if you are an Agile fan) I am going to be implementing
+      For my first little project (you could refer to it as a story if you are an Agile fan) I am going to be
+      implementing
       a "Post" button using Vue.js to pop a modal, allow a user (me for now) to type an entry, then save it to a
       postgresql
       database through a NodeJS api that I built. A follow up story will then be to select the blog entry from the db
