Blog post #2 for the day

--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
   <h1 class="comp-title">DOUGH Dev Details</h1>
 
   <div class="card">
+    <h3>Algorithms - February 14, 2022</h3>
+    <p>
+      Second post of the day alert! Today was a good day of balance and productivity. Time with family, time at work,
+      time to code, time to workout, time for Valentine's Day dinner from our favorite Chinese restaurant, and additional
+      time to code and watch Netflix with the Project Manager
+      (this is my nickname for my wife, she keeps me on track most of the time &#128514;).
+    </p>
+    <p>
+      Tonight, I have been working on a quicksort algorithm written in Java. I do this occasionally when I want to dust
+      off
+      a language that I plan on using in the future or when I want to focus my mind on solving problems step by step in
+      small
+      chunks. In tonight's code both cases were true.
+    </p>
+  </div>
+
+  <div class="card">
     <h3>Back at it! - February 14, 2022</h3>
     <p>
       Greetings, Dough Dev world! I am back at it again with new updates and a new year to try and keep some consistency
@@ -86,7 +103,7 @@
       process; however, when you get "real"
       with yourself, sometimes creativity just strikes during your morning shower, or in the middle of a meeting,
       or
-      maybe right before you fall asleep. My inital
+      maybe right before you fall asleep. My initial
       instinct when this little beam of brilliance hits me is to write it down, sketch it up, or code that motha
       until
       the cows come home.
