Add date to new post

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h1 class="comp-title">DOUGH Dev Details</h1>
 
   <div class="card" id="post">
-    <h3>API Calls using Vue.js</h3>
+    <h3>API Calls using Vue.js - February 16, 2022</h3>
     <p>{{ info }}</p>
     <p>
       It worked! The above "Blog post returned" text is coming back from a get request that I
