Adjust iphone styling

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 
   <h1 class="comp-title">DOUGH Dev Details</h1>
 
+  <div class="card">
+    <h3>Organizing Scripts in Vue</h3>
+    <p>
+      Good morning, Dev world. Recently, I have been thinking about how to organize my Vue.js scripts within my dough-dev
+      project. I started playing around with Vue 3 and liked it, but it felt more like a Angular application where you
+      create components and organize everything like an application instead of a HTML page.
+    </p>
+  </div>
+
   <div class="card" id="post">
     <h3>API Calls using Vue.js - February 16, 2022</h3>
     <p>It worked! {{ info }}</p>
