Start jdbc template post

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
   <h1 class="comp-title">DOUGH Dev Details</h1>
 
   <div class="card">
-    <h3>Organizing Scripts in Vue</h3>
+    <h3>Java Jdbc Template and PostgreSQL - February 25, 2022</h3>
+    <p>
+      Lots to discuss since my last post. I have added a new repository into the Dough Management API that
+      will be in charge of all things Postgres. The PostgresBlogRepository is currently implementing an
+      interface with two functions on it (findBlog and saveBlog) ... 
+    </p>
+  </div>
+
+  <div class="card">
+    <h3>Organizing Scripts in Vue - February 21, 2022</h3>
     <p>
       Good morning, Dev world. Recently, I have been thinking about how to organize my Vue.js scripts within my dough-dev
       project. I started playing around with Vue 3 and liked it, but it felt more like a Angular application where you
