Update api call blog post

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h3>API Calls using Vue.js - February 16, 2022</h3>
     <p>It worked! {{ info }}</p>
     <p>
-      The above "Blog post returned" text is coming back from a GET request that I set up on a new api using axios.
+      The above "{{ info }}" text is coming back from a GET request that I set up on a new api using axios.
       I have never used axios before prior to playing around with Vue.js, but so far it has been very easy to implement.
       The GET request is being mounted onto Vue data() using axios and receiving the response using a promise.
     </p>
