--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
   <h1 class="comp-title">DOUGH Dev Details</h1>
 
   <div class="card">
+    <h3>Vim Or Bust - March 31, 2022</h3>
+    <p>
+      Still need to finish last blog post, but wanted to get a placeholder in here since I have been on a Vim kick
+      recently.
+    </p>
+  </div>
+
+  <div class="card">
     <h3>Java Jdbc Template and PostgreSQL - February 25, 2022</h3>
     <p>
       Lots to discuss since my last post. I have added a new repository into the Dough Management API that
