i3 + Tmux blog post

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   </div>
 
   <h1 class="comp-title">DOUGH Dev Details</h1>
+  <div class="card">
+    <h3>i3 + Tmux - April 3, 2022</h3>
+    <p>
+      Still need to finish the last two blog posts, but wanted to get a placeholder here for the new window manager
+      I have been using with a terminal tool called tmux.
+    </p>
+  </div>
+
 
   <div class="card">
     <h3>Vim Or Bust - March 31, 2022</h3>
