Add to Org Vue Js blog

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
       project. I started playing around with Vue 3 and liked it, but it felt more like a Angular application where you
       create components and organize everything like an application instead of a HTML page.
     </p>
+    <p>
+      With that being said, I have made the decision to stick with Vue 2 and keep this blog very simple and not turn it into
+      an application until necessary.
+    </p>
   </div>
 
   <div class="card" id="post">
