Create blog holder for i3 and tmux

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </div>
 
   <h1 class="comp-title">DOUGH Dev Details</h1>
+  
   <div class="card">
     <h3>i3 + Tmux - April 3, 2022</h3>
     <p>
@@ -24,12 +25,13 @@
     </p>
   </div>
 
-
   <div class="card">
     <h3>Vim Or Bust - March 31, 2022</h3>
     <p>
-      Still need to finish last blog post, but wanted to get a placeholder in here since I have been on a Vim kick
-      recently.
+      According to Google, Vim (text editor) was first released in November of 1991. A 30 year old text editor!
+      You may ask yourself, why on earth are you writing about this?! Great question! I actually hated Vim when 
+      I first became an engineer. I thought, why the hell would you use this?! Also, how the hell do you write to
+      a file?!?!
     </p>
   </div>
 
