Add to Vim blog post

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
       I first became an engineer. I thought, why the hell would you use this?! Also, how the hell do you write to
       a file?!?!
     </p>
+    <p>
+      Sorry, got taken away there for a second. Anyway ... I finally did figure out how to write to a file and
+      so so much more!
+    </p>
+    <p>
+      Vim at the beginning is a bit cumbersome and clunky. It takes a lot of practice to get good, but once
+      you figure it out and get that muscle memory down, it can totally be a GameChanger.
+    </p>
   </div>
 
   <div class="card">
