--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
     </p>
     <p>
       Vim at the beginning is a bit cumbersome and clunky. It takes a lot of practice to get good, but once
-      you figure it out and get that muscle memory down, it can totally be a GameChanger.
+      you figure it out and get that muscle memory down, it can totally be a GameChanger. After a few years of
+      using Vim plugins for IDE's, I recently leveled up by discovering vim-plug for your .vimrc file. I think
+      my first plugin was a fuzzy finder, then an LSP, and then a color scheme lol. :p
+    </p>
+    <p>
+      Very excited to see where this new discovery will take me over the next year. Currently, only using the
+      Vim flow for front-end development (using it right now). Have not found a great workflow for Java development
+      yet, but might try using the eclim plugin which is from what I understand like running a headless version
+      of the Eclipse IDE underneath the Vim text editor. We shall see!
     </p>
   </div>
 
