--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
 </head>
 
 <body class="container-fluid">
@@ -41,7 +42,7 @@
       Vim at the beginning is a bit cumbersome and clunky. It takes a lot of practice to get good, but once
       you figure it out and get that muscle memory down, it can totally be a GameChanger. After a few years of
       using Vim plugins for IDE's, I recently leveled up by discovering vim-plug for your .vimrc file. I think
-      my first plugin was a fuzzy finder, then an LSP, and then a color scheme lol. :p
+      my first plugin was a fuzzy finder, then an LSP, and then a color scheme lol. &#128516
     </p>
     <p>
       Very excited to see where this new discovery will take me over the next year. Currently, only using the
