--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       Vim at the beginning is a bit cumbersome and clunky. It takes a lot of practice to get good, but once
       you figure it out and get that muscle memory down, it can totally be a GameChanger. After a few years of
       using Vim plugins for IDE's, I recently leveled up by discovering vim-plug for your .vimrc file. I think
-      my first plugin was a fuzzy finder, then an LSP, and then a color scheme lol. &#128516
+      my first plugin was a fuzzy finder, then an LSP, and then a color scheme lol. &#128516;
     </p>
     <p>
       Very excited to see where this new discovery will take me over the next year. Currently, only using the
