Testing auto deploy

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h3>i3 + Tmux - April 3, 2022</h3>
     <p>
       Still need to finish the last two blog posts, but wanted to get a placeholder here for the new window manager
-      I have been using with a terminal tool called tmux.
+      I have been using with a terminal tool called tmux. Testing auto deploy.
     </p>
   </div>
 
