Push new blog to test CI CD

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <h1 class="comp-title">DOUGH Dev Details</h1>
 
     <div class="card">
+      <h3>New Blog - October 12, 2022</h3>
+      <p>Pushing new blog to test CI/CD</p>
+    </div>
+
+    <div class="card">
       <h3>i3 + Tmux - August 2, 2022</h3>
       <p>
         i3 and Tmux ... this combo did not last long for me. At first I really
