Testing new stack deployment

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="card">
       <h3>New Blog - October 12, 2022</h3>
-      <p>Pushing new blog to test CI/CD</p>
+      <p>Pushing new blog to test new stack for deployment</p>
     </div>
 
     <div class="card">
