New Year 2023 blog post

--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
     <h1 class="comp-title">DOUGH Dev Details</h1>
 
     <div class="card">
+      <h3>New Blog - January 1, 2023</h3>
+      <p>
+        NEW YEAR, NEW BLOG POST!!
+      </p>
+      <p>
+        This year ... I will be focusing on pretty similar topics. Mostly, I like to chat
+        about what tech I am learning and fiddling with in my free time (currently: playing
+        with lua and creating plugins for Neovim, teaching myself python for better script
+        writing/automation, and started to teach myself golang, but lost steam there when I
+        couldn't see a huge different between it and other backend languages for server side
+        calls).
+      </p>
+    </div>
+
+    <div class="card">
       <h3>New Blog - October 12, 2022</h3>
       <p>Pushing new blog to test new stack for deployment</p>
     </div>
