--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
       about what tech I am learning and fiddling with in my free time (currently: playing
       with lua and creating plugins for Neovim, teaching myself python for better script
       writing/automation, and started to teach myself golang, but lost steam there when I
-      couldn't see a huge different between it and other backend languages for server side
-      calls).
+      couldn't see a huge difference between it and other backend languages for server side
+      calls).I have acquired that trend from doing this for aliving. If I am no using something
+      for a specific purpose, I prune that "thing" from my arsenal to open up room for something
+      useful.
+    </p>
+    <p>
+      This year ... I think I want to start blogging more about what I am doing at work in broad
+      strokes. Obviously, I cannot get to specific with implementations or in the weeds on perhaps
+      why I am working on a solution, but I do think it is important to discuss some of the stuff that
+      fills my day between 8-5 Mon-Fri.
     </p>
   </div>
 
