Java vs CSharp post

--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
   <h1 class="comp-title">DOUGH Dev Details</h1>
 
   <div class="card">
-    <h3>New Blog - January 1, 2023</h3>
+    <h3>Java vs C# - January 5, 2023</h3>
+    <p>
+      In 2022 I would say that probably 70% of the code I wrote was java, 20% was javascript,
+      and the remaining 10% was C#. That being said, I felt like it was a very easy transition
+      back a forth between java and C#. Whereas switching between javascript and a statically
+      typed language took a bit of time to get back in the swing of things.
+    </p>
+  </div>
+
+  <div class="card">
+    <h3>Happy New Year! - January 1, 2023</h3>
     <p>
       NEW YEAR, NEW BLOG POST!!
     </p>
