--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
       In 2022 I would say that probably 70% of the code I wrote was java, 20% was javascript,
       and the remaining 10% was C#. That being said, I felt like it was a very easy transition
       back a forth between java and C#. Whereas switching between javascript and a statically
-      typed language took a bit of time to get back in the swing of things ...
+      typed language took a bit of time to get back in the swing of things.
+    </p>
+    <p>
+      Due to the fact that I write more code in java, I would say that I am much more comfortable
+      with writing backend services using Spring Boot, pom files (or gradle.build files for some 
+      Kotlin projects I have worked on), Spring annotations ...
     </p>
   </div>
 
