Logseq blog update

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
         of software to us called Logseq. I have always been a huge nerd around
         note taking apps, I love lists and reminders on my phone for todos to
         get me organized, and was using the Notes app for documentation or note
-        taking at work.
+        taking at work. Notes was fine, but once I saw what Logseq could do I 
+        was instantly sold.
+      </p>
+      <p>
+        Logseq is a lightweight piece of software that is based around graphs.
+        This is what separates it from Notes or OneNote in my eyes. You can easily
+        link and tag pages and comments to other pages with simple commands and
+        symbols making it very easy to search and organize your data for future
+        needs.
       </p>
     </div>
 
