Azure functions blog post

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     <h1 class="comp-title">DOUGH Dev Details</h1>
 
     <div class="card">
+      <h3>Azure Functions - January 13, 2023</h3>
+      <p>
+        Blog placeholder ...
+      </p>
+    </div>
+
+    <div class="card">
       <h3>Logseq - January 9, 2023</h3>
       <p>
         Last Friday, one of my co-workers did a demo of an older, but new piece
