--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     <h1 class="comp-title">DOUGH Dev Details</h1>
 
     <div class="card">
-      <h3>Azure Functions - January 13, 2023</h3>
+      <h3>Azure Functions - January 23, 2023</h3>
       <p>
-        Blog placeholder ...
+        Where do I start with this one. Friday I was having a love hate
+        relationship with az functions ...
       </p>
     </div>
 
