20230201 blog post update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h3>Azure Functions - January 23, 2023</h3>
       <p>
         Where do I start with this one. Friday I was having a love hate
-        relationship with az functions ...
+        relationship with az functions ....
       </p>
     </div>
 
