azure function blog updates

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
   <h1 class="comp-title">DOUGH Dev Details</h1>
 
   <div class="card">
-    <h3>Azure Functions - January 23, 2023</h3>
+    <h3>Azure Functions - February 2, 2023</h3>
     <p>
       Where do I start with this one. Friday I was having a love hate
-      relationship with az functions ....
+      relationship with az functions. I continue to see the benefit of using these
+      small code based functions that are rather powerful when used for the correct
+      use case. I also, find that the more I use and research how to use this tool
+      the better I get at implementing a stardard way of running these functions.
     </p>
   </div>
 
